# RustyMine

./: README.md
src/backend/: Cargo.toml  build.rs
src/backend/migrations/: 0002_create_users.sql  0003_create_perms.sql
src/backend/src/: config.rs  lib.rs  main.rs  state.rs
src/backend/src/auth/: mod.rs
src/backend/src/core/: mod.rs  user_routines.rs
src/backend/src/domain/: api.rs  mod.rs  user.rs  user_prems.rs  validation.rs
src/backend/src/infra/db/: perms.rs  user.rs
src/backend/src/router/: middleware.rs  mod.rs  user_routes.rs
src/frontend/: package.json  pnpm-lock.yaml
src/frontend/app/: routes.ts
src/frontend/app/lib/: api.ts
src/frontend/app/routes/: dashboard.tsx  login.tsx
