[package]
name = "rustymine-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.43", features = ["max_level_debug"] }
tracing-subscriber = "0.3.22"
