[package]
name = "rustymine-daemon"
version = "0.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
axum = "0.8.7"
chrono = "0.4.42"
lazy_static = "1.5.0"
password-hash = "0.5.0"
rand_core = { version = "0.6", features = ["getrandom"] }
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive", "serde_derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5.2", features = ["tokio", "tracing"] }
tower-http = { version = "0.6.7", features = ["cors"] }
tracing = { version = "0.1.43", features = ["max_level_debug"] }
tracing-subscriber = "0.3.22"
validator = { version = "0.20.0", features = ["derive"] }

[build-dependencies]
chrono = "0.4.42"
