[package]
name = "rustymine-daemon"
version = "0.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
axum = "0.8.7"
chrono = "0.4.42"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
lazy_static = "1.5.0"
password-hash = "0.5.0"
rand_core = { version = "0.6", features = ["getrandom"] }
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive", "serde_derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5.2", features = ["tokio", "tracing"] }
tower-http = { version = "0.6.7", features = ["cors"] }
tracing = { version = "0.1.43", features = ["max_level_debug"] }
tracing-subscriber = "0.3.22"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }

[build-dependencies]
chrono = "0.4.42"
